--- a/client/src/Components/Card/card.css
+++ b/client/src/Components/Card/card.css
@@ -1,6 +1,33 @@
 .card-cont{
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     border: solid black 2px;
+    background-color: gray;
+    border-radius: 10px;
+    height: 15rem;
+    width: 15rem;
+    margin: 1rem;
 
+}
+
+.img-cont{
+    display: flex;
+    justify-content: center;
+    max-width: 96px;
+    max-height: 96px;
+    border: solid white 1px;
+}
+
+.info-cont{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+#pokepic{
+    max-width: 100%;
+    max-height: 100%;
 }
