--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -1,3 +1,52 @@
 .navbar-cont{
-    background-color: aqua;
+    background-color: #C12026;
+    border-right: solid black 10px;
+    display: flex;
+    flex-flow: column wrap;
+    height: 100vh;
+    width: 200px;
 }
+
+.link-cont{
+    display: flex;
+    flex-flow: column wrap;
+    margin-top: 10vh;
+}
+
+.link-style{
+    text-decoration: none;
+    transition: all 0.3s;
+    color: white;
+}
+
+.link-style:hover{
+    background-color: white;
+    color: #C12026;
+}
+
+
+/* intento de circulo en el navbar*/
+/* .circle {
+        position: fixed;
+        z-index: 1;
+        top: 40.55%;
+        left: 7.88%;
+        width: 100px;
+        height: 100px;
+        background: white;
+        -moz-border-radius: 50%;
+        -webkit-border-radius: 50%;
+        border-radius: 50%;
+}
+
+.border-circle{
+        position: fixed;
+        top: 40%;
+        left: 7.6%;
+        width: 110px;
+        height: 110px;
+        background: black;
+        -moz-border-radius: 50%;
+        -webkit-border-radius: 50%;
+        border-radius: 50%;
+} */
