--- a/client/src/Components/Navbar/navbar.css
+++ b/client/src/Components/Navbar/navbar.css
@@ -1,28 +1,39 @@
 .navbar-cont{
     background-color: #C12026;
-    border-right: solid black 10px;
+    border-bottom: solid black 10px;
     display: flex;
-    flex-flow: column wrap;
-    height: 100vh;
-    width: 200px;
+    flex-flow: row wrap;
 }
 
 .link-cont{
     display: flex;
-    flex-flow: column wrap;
-    margin-top: 10vh;
+    flex-flow: row wrap;
+    margin-left: 10vw;
 }
 
 .link-style{
     text-decoration: none;
     transition: all 0.3s;
     color: white;
+    margin-left: 2vw;
+    margin-right: 2vw;
 }
 
 .link-style:hover{
     background-color: white;
     color: #C12026;
 }
+
+/* .navbar-home-button{
+    transition: all 0.3s;
+    border-radius: 10px;
+}*/
+
+/* .navbar-home-button:hover{
+    background-color: white;
+    color: #C12026;
+    border-radius: 10px;
+} */
 
 
 /* intento de circulo en el navbar*/
