estilo estandarizado en todos los componentes

--- a/client/src/Views/Home/home.css
+++ b/client/src/Views/Home/home.css
@@ -3,10 +3,12 @@
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin: 3%;
 }
 
 .functions-cont{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
@@ -17,8 +19,8 @@
 
 button {
         color: white;
-        width: 6rem;
-        height: 3rem;
+        width: auto;
+        height: 2rem;
         border: 3px solid black;
         border-radius: 45px;
         transition: all 0.3s;
