--- a/client/src/Components/Card/card.css
+++ b/client/src/Components/Card/card.css
@@ -1,44 +1,23 @@
 .card-cont{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    align-items: center;
-    border: 3px solid black;
-    background-color: #C12026;
-    border-radius: 10px;
-    height: 15rem;
-    width: 15rem;
-    margin: 1rem;
-
+    border: 1px solid rgb(187, 187, 187);
 }
 
 .img-cont{
     display: flex;
     justify-content: center;
-    max-width: 96px;
-    max-height: 96px;
     background-color: #8DB9DC;
-    border: solid white 5px;
-    border-radius: 10px;
+    transition: all 0.8s;
 }
 
-.info-cont{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    border-radius: 10px;
-    background-color: #53B161;
-    width: 10rem;
-    height: 7rem;
-    color: white;
+.img-cont img {
+    width: 100%;
+    transition: all 0.8s;
 }
 
-#pokepic{
-    max-width: 100%;
-    max-height: 100%;
+.img-cont:hover {
+    background-color: red;
 }
 
-.card-link{
-    text-decoration: none;
+.img-cont img:hover {
+    width: 105%;
 }
