--- a/client/src/Components/Cards/cards.css
+++ b/client/src/Components/Cards/cards.css
@@ -2,6 +2,6 @@
     display: grid;
     /* grid-template-columns: repeat(auto-fit, minmax(25%, 1fr)); /* ajusta las cards al width de la imagen */
     grid-template-columns: repeat(4, 1fr);  /* grid estatico de 4 columnas */
-    gap: 5px;
-    margin: 1rem;
+    gap: 10px;
+    margin: 3%;
 }
